Add createGrid fn with hardcoded value and piling up divs with every click

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+    <script src="etch.js" defer></script>
 </head>
 <body>
-	|
+    <div class = "mainButtonContainer">
+        <input type="number" id="myInput"/>
+        <button class = "mainButton">Input Button</button></div>
+    <div class="mainContainer"></div>
 </body>
 </html>
+
+
+<!-- min="1" max="100" -->
