Change button text and page bg color

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class = "mainButtonContainer">
-        <input type="number" id="myInput"/>
-        <button class = "mainButton">Input Button</button></div>
+        <!-- <input type="number" id="myInput"/> -->
+        <button class = "mainButton">Click to enter Grid Size</button></div>
     <div class="mainContainer"></div>
 </body>
 </html>
